Complete diff-first review workbench and explorer usability